--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -41,7 +41,7 @@ nav
   display: flex;
   justify-content: space-between;
   background-color:rgba(58, 86, 189, 0.6);
-  position: fixed ;
+  position:fixed ;
   width: 100%;
   z-index: 1000;
   transition: background-color 0,3 ease;
@@ -360,14 +360,20 @@ footer
   {
     display: block;
     width: auto;
-    margin: 1px auto;
+    margin: 100px auto;
     scale: 1;
   } 
 
   .color-inf
   {
-    height: auto;
+    height: 1350px;
     margin-top: 100px;
+  }
+
+  .secP
+  {
+    gap: 30px;
+    justify-content: center;
   }
  
 }
