--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -372,8 +372,96 @@ footer
 
   .secP
   {
-    gap: 30px;
     justify-content: center;
+    gap: 50PX;
   }
  
 }
+
+@media (max-width:1220px)
+{
+  .conteudo-footer
+  {
+    display: flex;
+    flex-direction:column ;
+    gap: 30px;
+    height: auto;
+    margin-top: 200px;
+    text-align: center;
+    scale: 2;
+  }
+
+  .secP
+  {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+  }
+
+  .color-secP
+  {
+    height: 2500px;
+    width: auto;
+  }
+}
+
+@media (max-width:820px)
+{
+  .inicio
+  {
+    scale: 0.9;
+  }
+
+  .esquerda
+  {
+    margin-left: 40px;
+  }
+
+  .direita
+  {
+    gap: 30px;
+    margin-right: 90px;
+  }
+
+  .arrow-up
+  {
+    display: flex;
+    margin-left: 695px;
+  }
+
+  .color-inicio
+  {
+    width: auto;
+  }
+}
+
+@media (max-width:735px)
+{
+  .inicio
+  {
+    scale: 0.8;
+  }
+
+  .arrow-up
+  {
+    margin-left: 610px;
+  }
+}
+
+@media (max-width:695px)
+{
+  .direita
+  {
+    margin-right: 45px;
+  }
+}
+
+@media (max-width:650px)
+{
+  .arrow-up
+  {
+    margin-left: 560px;
+  }
+}
+
+
