--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -378,7 +378,7 @@ footer
  
 }
 
-@media (max-width:1220px)
+@media (max-width:1350px)
 {
   .conteudo-footer
   {
@@ -403,9 +403,20 @@ footer
     height: 2500px;
     width: auto;
   }
+
+  .conteudo-footer
+  {
+    scale: 1.7;
+    
+  }
+
+  .arrow-up
+  {
+    margin-left: 1200px;
+  }
 }
 
-@media (max-width:820px)
+@media (max-width:755px)
 {
   .inicio
   {
@@ -426,29 +437,29 @@ footer
   .arrow-up
   {
     display: flex;
-    margin-left: 695px;
+    margin-left: 630px;
   }
 
   .color-inicio
   {
     width: auto;
   }
-}
 
-@media (max-width:735px)
-{
-  .inicio
+  .conteudo-footer
   {
-    scale: 0.8;
+    scale: 1.55;
+    
   }
 
-  .arrow-up
+  footer
   {
-    margin-left: 610px;
+    height: 350px;
   }
 }
 
-@media (max-width:480px)
+
+
+@media (max-width:471px)
 {
   .esquerda
   {
@@ -470,14 +481,24 @@ footer
 
   .arrow-up
   {
-    margin-left: 390px;
-    font-size: 50px;
+    margin-left: 380px;
+    scale: 0.8;
   }
 
   .inicio
   {
     scale: 0.8;
     
+  }
+
+  .color-secP
+  {
+    width: 471px;
+  }
+
+  .color-inicio
+  {
+    width: 471px;
   }
 }
 
@@ -487,7 +508,7 @@ footer
   {
     scale: 0.75;
     width: 360px;
-    margin-left: -15px;
+    margin-left: 50px;
   }
 
   .color-inf
@@ -504,7 +525,7 @@ footer
 
   .direita
   {
-    scale: 0.65;
+    scale: 0.8;
     gap: 20px;
     width: 40px;
     margin-right: 230px;
@@ -512,18 +533,18 @@ footer
 
   .esquerda
   {
-    scale: 0.6;
-    margin-left: -40px;
+    scale: 0.8;
+    margin-left: -20px;
   }
 
   nav
   {
-    width: 360px;
+    width: 100%;
   }
 
   .arrow-up
   {
-    margin-left: 274px;
+    margin-left: 390px;
     scale: 0.75;
     margin-top: 10px;
 
@@ -539,5 +560,6 @@ footer
   { 
     scale: 1.8;
     gap: 50px;
+    margin-left: 145px;
   }
 }
