--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -504,16 +504,22 @@ footer
 
 @media (max-width:400px)
 {
+  .color-inicio
+  {
+    width: 400px;
+  }
+
   .informacoes
   {
     scale: 0.75;
     width: 400px;
-    margin-left: 50px;
+  
   }
 
   .color-inf
   {
     height: 1300px;
+    width: 400px;
   }
 
   .inicio
@@ -525,7 +531,7 @@ footer
 
   .direita
   {
-    scale: 0.8;
+    scale: 0.65;
     gap: 20px;
     width: 40px;
     margin-right: 230px;
@@ -533,18 +539,23 @@ footer
 
   .esquerda
   {
-    scale: 0.8;
+    scale: 0.65;
     margin-left: -20px;
   }
 
   nav
   {
-    width: 100%;
+    width: 400px;
+  }
+
+  .color-secP
+  {
+    width: 400px;
   }
 
   .arrow-up
   {
-    margin-left: 390px;
+    margin-left: 330px;
     scale: 0.75;
     margin-top: 10px;
 
@@ -558,8 +569,8 @@ footer
 
   .conteudo-footer 
   { 
-    scale: 1.8;
+    scale: 1.7;
     gap: 50px;
-    margin-left: 145px;
+    margin-left: 80px;
   }
 }
